--- a/index.html
+++ b/index.html
@@ -20,44 +20,49 @@
     const canvas = document.getElementById('tictactoe');
     canvas.addEventListener('click', ({clientX, clientY}) => {
       if(win){return}
+      if(playerOne === '') {
+        playerOne = currentPlayer;
+        playerTwo = playerOne === 'X'? 'O' : 'X';
+      }
+      if(playerOne !== currentPlayer) return;
       let clicked  = false;
       if(clientX < w) {
         if(clientY < h) {
-          nextTurn([0,0])
+          nextTurn([0,0], playerOne)
           clicked = true;
         } else if (clientY < h *2) {
-          nextTurn([1,0])
+          nextTurn([1,0], playerOne)
           clicked = true;
         } else if (clientY < CANVAS_HEIGHT) {
-          nextTurn([2,0])
+          nextTurn([2,0], playerOne)
           clicked = true;
         }
       } else if(clientX < w * 2) {
         if(clientY < h) {
-          nextTurn([0,1])
+          nextTurn([0,1], playerOne)
           clicked = true;
         } else if (clientY < h *2) {
-          nextTurn([1,1])
+          nextTurn([1,1], playerOne)
           clicked = true;
         } else if (clientY < CANVAS_HEIGHT) {
-          nextTurn([2,1])
+          nextTurn([2,1], playerOne)
           clicked = true;
         }
       } else if (clientX < CANVAS_WIDTH) {
         if(clientY < h) {
-          nextTurn([0,2])
+          nextTurn([0,2], playerOne)
           clicked = true;
         } else if (clientY < h *2) {
-          nextTurn([1,2])
+          nextTurn([1,2], playerOne)
           clicked = true;
         } else if (clientY < CANVAS_HEIGHT) {
-          nextTurn([2,2])
+          nextTurn([2,2], playerOne)
           clicked = true;
         }
       }
       if(clicked){
         console.log('AI tenker');
-        setTimeout(()=>nextAITurn(currentPlayer),200)
+        setTimeout(()=>nextAITurn(playerTwo),200)
       }
     });
     const ctx = canvas.getContext('2d');
@@ -72,7 +77,8 @@
 
     const players = ['X', 'O'];
     let currentPlayer = 'X';
-
+    let playerOne = '';
+    let playerTwo = '';
     let playArea = [
       ['','',''],
       ['','',''],
@@ -86,6 +92,8 @@
 
   function setUp() {
     currentPlayer = 'X';
+    playerOne = '';
+    playerTwo = '';
     available = [];
     playArea = [
       ['','',''],
@@ -117,13 +125,16 @@
   }
 
   function nextTurn(spot, player) {
+    if(win) return
     if(available.length <1) return
+    if(player !== currentPlayer) return
     if(!spot) {
       const index = Math.floor(Math.random() * available.length)
       spot = available.splice(index,1)[0];
     } 
     const i = spot[0];
     const j = spot[1];
+    if(playArea[i][j] !== '') return
     available = available.filter(el => !(el[0] === i && el[1] === j))
     playArea[i][j] = player || currentPlayer;
     currentPlayer = currentPlayer === 'X' ? 'O' : 'X';
@@ -190,6 +201,7 @@
 
 
   function nextAITurn(player) {
+    if(player !== currentPlayer) return
     const spot = pickAIMove(playArea, available, player)
     nextTurn(spot[0], player)
   }
